# Project-Legacy-Clone-your-Soul

./: CMakeLists.txt  CMakePresets.json  CppProperties.json  Prisoner.jslot  Prisoner.json  Project Legacy.esp  dez.jslot  dez.json  girly.jslot  girly.json  vcpkg-configuration.json  vcpkg.json
DialogueViews/: 05016CB5.xml
Scripts/: BennyAlternateDeathScript.pex  BennyArmoryControlScript.pex  BennyConstructPerkManagerScript.pex  BennyDeathKnapsackScript.pex  BennyDismantleConstructScript.pex  BennyPhylacteryScript.pex  BennyPocketDimensionMarkScript.pex  BennyPocketDimensionRecallScript.pex  BennyRuinDoorActivatorScript.pex  BennyRuinLexiconStandScript.pex  BennySaltGeneratorScript.pex  BennyShelterBedroomUpgradeScript.pex  BennyShelterBhaNoteScript.pex  BennyShelterBuildingUpgradeItemScript.pex  BennyShelterCraftingDummyItemScript.pex  BennyShelterEntryScript.pex  BennyShelterExitScript.pex  BennyShelterMCMScript.pex  BennyShelterReturnQuestItemsScript.pex  BennyShelterSellChestScript.pex  BennyShelterSortingScript.pex  BennyShelterTrackerMarkerScript.pex  BennyShelterTrackingScript.pex  BennyShelterWaterValveScript.pex  BennyShelterWealthScript.pex  PL_ManagerQuest.pex  PL_PerkGlowScript.pex  PL_PlayerLoadGameAlias.pex  PL_PortalCubeScript.pex  PL_StationScript.pex  PL_VesselActor.pex
Scripts/source/: PL_ManagerQuest.psc  PL_PerkGlowScript.psc  PL_StationScript.psc  PL_VesselActor.psc
checks/: PL_StationScript.psc  PL_VesselActor.psc  Papyrus.cpp  dez.jslot  dez.json
src/: PL_Persistence.cpp  PL_Persistence.h  Papyrus.cpp  Papyrus.cpp.txt  Papyrus.h  plugin.cpp
(+116 files in other folders)
